--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 buildscript {
-    ext.kotlin_version = '1.4.30-RC'
     repositories {
-        maven { url = 'https://files.minecraftforge.net/maven' }
-        jcenter()
+        maven { url = 'https://maven.minecraftforge.net' }
         mavenCentral()
-        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.+', changing: true
+        // Make sure this version matches the one included in Kotlin for Forge
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
+        // OPTIONAL Gradle plugin for Kotlin Serialization
+        classpath "org.jetbrains.kotlin:kotlin-serialization:1.5.21"
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
@@ -16,12 +16,13 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 apply plugin: 'kotlin'
+apply plugin: 'kotlinx-serialization'
 
 version = '1.0.0'
 group = 'mods.feldim2425.computes' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'computes'
 
-sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
+java.toolchain.languageVersion = JavaLanguageVersion.of(8)
 
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 minecraft {
@@ -30,7 +31,7 @@ minecraft {
     // stable_#            Stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
-    mappings channel: 'snapshot', version: '20201028-1.16.3'
+    mappings channel: 'official', version: '1.16.5'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
@@ -100,11 +101,6 @@ repositories {
         url = 'https://thedarkcolour.github.io/KotlinForForge/'
     }
 
-    maven {
-        name = 'wasner-jni'
-        url = 'https://dl.bintray.com/wasmer/wasmer-jni'
-    }
-    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
     mavenCentral()
 }
 
@@ -112,10 +108,11 @@ dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.16.4-35.1.36'
+    minecraft 'net.minecraftforge:forge:1.16.5-36.1.32'
 
-    fg.deobf(implementation('thedarkcolour:kotlinforforge:1.7.0'))
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    //fg.deobf(implementation('thedarkcolour:kotlinforforge:1.15.1'))
+    implementation('thedarkcolour:kotlinforforge:1.14.0')
+    //implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
@@ -135,14 +132,6 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
-}
-
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-        languageVersion = '1.4'
-        apiVersion = '1.4'
-    }
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
