--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,15 +1,15 @@
-modLoader="kotlinforforge" #mandatory
-loaderVersion="[1.6,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
-license="All rights reserved"
+modLoader = "kotlinforforge" #mandatory
+loaderVersion = "[1.14,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
+license = "All rights reserved"
 
 [[mods]] #mandatory
-modId="computes" #mandatory
-version="${file.jarVersion}" #mandatory
-displayName="Computes" #mandatory
-logoFile="examplemod.png" #optional
-credits="Thanks for this example mod goes to Java" #optional
-authors="Love, Cheese and small house plants" #optional
-description='''
+modId = "computes" #mandatory
+version = "${file.jarVersion}" #mandatory
+displayName = "Computes" #mandatory
+logoFile = "examplemod.png" #optional
+credits = "Thanks for this example mod goes to Java" #optional
+authors = "Love, Cheese and small house plants" #optional
+description = '''
 This is a long form description of the mod. You can write whatever you want here
 
 Have some lorem ipsum.
@@ -18,15 +18,15 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mollis lacinia magn
 '''
 
 [[dependencies.computes]] #optional
-    modId="forge" #mandatory
-    mandatory=true #mandatory
-    versionRange="[35,)" #mandatory
-    ordering="NONE"
-    side="BOTH"
+modId = "forge" #mandatory
+mandatory = true #mandatory
+versionRange = "[36,)" #mandatory
+ordering = "NONE"
+side = "BOTH"
 
 [[dependencies.computes]]
-    modId="minecraft"
-    mandatory=true
-    versionRange="[1.16.4,1.17)"
-    ordering="NONE"
-    side="BOTH"
+modId = "minecraft"
+mandatory = true
+versionRange = "[1.16.5]"
+ordering = "NONE"
+side = "BOTH"
